--- a/example/css/Default.css
+++ b/example/css/Default.css
@@ -6,9 +6,16 @@ inception {
     display: inline-block;
     border-radius: 2px;
     font-size: 11px;
-    margin-right: 5px;
+    margin: 0 5px 5px 0;
     cursor: pointer;
     transition: all .25s;
+    
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 inception:hover {
